--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-253.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-173.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇨🇳 中国-158.7KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.253, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇳🇱 荷兰-899.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇳🇱 荷兰-973.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-823.7KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇸🇬 新加坡-1.84MB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-570.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇫🇷 法国-620.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇩🇪 德国-2.18MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: gnailiad.ga, port: 39208, type: trojan, password: swXgcgRW7p, sni: gnailiad.ga, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-406.6KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-240.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇯🇵 日本-322.4KB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-253.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-173.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-899.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-973.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-823.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
