--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-570.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇫🇷 法国-620.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇩🇪 德国-2.18MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: gnailiad.ga, port: 39208, type: trojan, password: swXgcgRW7p, sni: gnailiad.ga, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-406.6KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-240.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇯🇵 日本-322.4KB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-281.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-1.03MB/s(Youtube:不良林), server: scloud56.jafiyun.life, port: 22056, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud56.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-364.1KB/s(Youtube:不良林), server: scloud58.jafiyun.life, port: 22058, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud58.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-291.2KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-792.9KB/s(Youtube:不良林), server: scloud55.jafiyun.life, port: 22055, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud55.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-483.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-570.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-620.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-477.8KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-322.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
