--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,118 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-281.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-1.03MB/s(Youtube:不良林), server: scloud56.jafiyun.life, port: 22056, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud56.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-364.1KB/s(Youtube:不良林), server: scloud58.jafiyun.life, port: 22058, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud58.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-291.2KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-792.9KB/s(Youtube:不良林), server: scloud55.jafiyun.life, port: 22055, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud55.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-483.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-197.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.23MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-547.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-485.2KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-213.9KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-291.2KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇬🇧 英国-312.1KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-295.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-245.1KB/s(Youtube:不良林), server: scloud53.jafiyun.life, port: 22053, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud53.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-209.6KB/s(Youtube:不良林), server: 213.183.59.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-223.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-166.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-281.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
-      - 🇭🇰 香港-364.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-291.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-792.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-483.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-197.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-547.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-485.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-213.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-291.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-312.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-245.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
