--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,119 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-490.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-855.8KB/s(Youtube:不良林), server: scloud54.jafiyun.life, port: 22054, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud54.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.32MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-592.5KB/s(Youtube:不良林), server: scloud53.jafiyun.life, port: 22053, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud53.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-745.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-890.6KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-300.1KB/s(Youtube:不良林), server: scloud56.jafiyun.life, port: 22056, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud56.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-353.3KB/s(Youtube:不良林), server: scloud55.jafiyun.life, port: 22055, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud55.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-291.8KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-592.5KB/s(Youtube:不良林), server: scloud53.jafiyun.life, port: 22053, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud53.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-855.8KB/s(Youtube:不良林), server: scloud54.jafiyun.life, port: 22054, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud54.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.63MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-336.1KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-262.2KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -133,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-490.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-300.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-353.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-291.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-592.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-262.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-385.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-324.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
